@@ -1,4 +1,5 @@
 0.6.0
+Fixed bookmark menu width prefs.
 Added clipboard plugin.
 Done calling plugrun functions on all plugins at certain poiints ( save/load/switch page etc ).
 Fixed current session not being changed.
